initial broadlink APIs scaffolding
