# src/api/models/broadlink.ts
@@ -1,0 +1,11 @@
+export interface BroadlinkDevice {
+    id: number,
+    name: string,
+    host: string,
+    mac?: string,
+    type: string
+}
+
+export interface BroadlinkDeviceState {
+    is_active: boolean
+}
