# src/api/models/index.ts
@@ -1,0 +1,6 @@
+export interface ResponseModel {
+    code: number,
+    message: string
+}
+
+export interface ErrorResponseModel extends ResponseModel {}
