# src/api/services/health.ts
@@ -1,14 +1,14 @@
 import * as HTTP_STATUS from 'http-status-codes';
 // import l from '../../common/logger';
-import { Health } from '../models/health';
+import { ResponseModel } from '../models';
 import { resolve } from 'dns';
 
 export class HealthService {
   
-    get(): Promise<Health> {
+    get(): Promise<ResponseModel> {
         return new Promise((resolve, reject) => {
-            const status: Health = {
-                status: HTTP_STATUS.OK,
+            const status: ResponseModel = {
+                code: HTTP_STATUS.OK,
                 message: "All good!"
             };
             resolve(status);
